# Copyright (C) 2005 Lorenz Schori <lo@znerol.ch>
#  
# This file is free software; as a special exception the author gives
# unlimited permission to copy and/or distribute it, with or without 
# modifications, as long as this notice is preserved.
# 
# This program is distributed in the hope that it will be useful, but
# WITHOUT ANY WARRANTY, to the extent permitted by law; without even the
# implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.

AC_INIT([k2o],[0.0.1],[lorenz schori lo@znerol.ch],[k2o])
AC_CONFIG_AUX_DIR(config)
AM_CONFIG_HEADER(config.h)

AM_INIT_AUTOMAKE()

# Process arguments
AC_ARG_WITH(liblo,
[  --with-liblo=DIR     use liblo in DIR],[
  if test "$withval" != "no" -a "$withval" != "yes"; then
    LIBLO_DIR=$withval
    CPPFLAGS="${CPPFLAGS} -I$withval/include"
    LDFLAGS="${LDFLAGS} -L$withval/lib"
  fi
])

# Check for host type
AC_CANONICAL_HOST

# Checks for programs.
AC_PROG_CC
AC_PROG_CXX
AC_PROG_INSTALL
AC_PROG_MAKE_SET
AC_PROG_CPP

# Checks for liblo.
AC_CHECK_LIB(lo,lo_send_internal,[],
				[AC_MSG_ERROR(You need to have liblo installed.)])


# Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS([arpa/inet.h fcntl.h inttypes.h netdb.h netinet/in.h stdint.h stdlib.h string.h sys/file.h sys/ioctl.h sys/socket.h sys/time.h unistd.h limits.h locale.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_HEADER_STDBOOL
AC_C_CONST
AC_C_INLINE
AC_HEADER_TIME
AC_STRUCT_TM

# Checks for library functions.
AC_FUNC_SELECT_ARGTYPES
AC_TYPE_SIGNAL
AC_FUNC_STRTOD
AC_CHECK_FUNCS([bzero gethostbyname gettimeofday memset select socket strchr strerror strtol modf])

# check for pthread support
ACX_PTHREAD(,AC_MSG_ERROR(k2o needs pthreads.))

AC_CONFIG_SUBDIRS()

AC_CONFIG_FILES([
   Makefile
   doc/Makefile
   m4/Makefile
   src/Makefile
])

AC_OUTPUT
